<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sounds Of Grind</string>
    <string name="hello_world">Sound Off! 1... 2... 3... Sound Off!</string>
    <string name="action_settings">Settings</string>
    <string name="temp_tit">Song Name Goes Here</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="fwd">Next</string>
    <string name="bck">Prev</string>
    <string name="band">MEGADETH</string>
    <string name="album">The System Has Failed</string>
    <string name="repeat">Repeat Song</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
