<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".main"
    android:id="@+id/sound">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/play"
        android:layout_marginBottom="67dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/back"
        android:layout_toStartOf="@+id/back" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:id="@+id/pause"
        android:layout_toEndOf="@+id/fwd"
        android:layout_alignTop="@+id/play"
        android:layout_toRightOf="@+id/fwd" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/stop"
        android:layout_below="@+id/titleShot"
        android:layout_toRightOf="@+id/pause"
        android:layout_toEndOf="@+id/pause" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temp_tit"
        android:id="@+id/titleShot"
        android:layout_above="@+id/pause"
        android:layout_toEndOf="@+id/play"
        android:layout_marginBottom="149dp"
        android:layout_toStartOf="@+id/stop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/stop"
        android:layout_alignEnd="@+id/stop" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:id="@+id/fwd"
        android:layout_below="@+id/titleShot"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prev"
        android:id="@+id/back"
        android:layout_below="@+id/titleShot"
        android:layout_toLeftOf="@+id/fwd"
        android:layout_toStartOf="@+id/fwd" />

</RelativeLayout>
